feat: Add comprehensive frontend logging system for autotests
- Add centralized Logger class (utils/logger.js) with automatic event interception
- Add TestLogger API (utils/test_logger.js) for autotest integration
- Add backend logs API endpoints (routers/logs.py)
- Integrate logging into ApiService with detailed API request/response logging
- Add logging to authentication forms (login.html, register.html)
- Add comprehensive logging documentation (docs/frontend_logging_guide.md)
- Add example autotest with logging (tests/example_test_with_logging.py)

Features:
- Automatic interception of console, fetch, user actions, errors, DOM changes
- Global API functions for autotests: getTestLogs(), clearTestLogs(), exportTestLogs()
- Advanced filtering and search capabilities
- Real-time log monitoring and statistics
- Support for Selenium, Playwright, Cypress frameworks
- Detailed log structure with timestamps, categories, and metadata

This enables complete frontend monitoring and debugging in autotests.

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Регистрация - Automation Learning Platform</title>
     <meta name="description" content="Регистрация в системе обучения автоматизаторов">
-    <meta name="api-base" content="http://localhost:5000">
+    <meta name="api-base" content="http://localhost:8000">
 
     <!-- CSS -->
     <link rel="stylesheet" href="styles/main.css">
@@ -281,6 +281,9 @@
     <!-- Toast Container -->
     <div id="toast-container"></div>
 
+    <!-- Logger -->
+    <script src="utils/logger.js"></script>
+
     <script>
         // Простая система уведомлений
         class Toast {
@@ -313,7 +316,7 @@
         // Система регистрации
         class RegistrationManager {
             constructor() {
-                this.apiBase = (document.querySelector('meta[name="api-base"]')?.content || 'http://localhost:5000').replace(/\/?$/, '');
+                this.apiBase = (document.querySelector('meta[name="api-base"]')?.content || 'http://localhost:8000').replace(/\/?$/, '');
                 this.init();
             }
 
