--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Automation Learning Platform</title>
     <meta name="description" content="Полноценное веб-приложение для обучения автоматизаторов">
-    <meta name="api-base" content="http://localhost:5000">
+    <meta name="api-base" content="http://localhost:8000">
 
     <!-- CSS -->
     <link rel="stylesheet" href="styles/fix.css">
@@ -553,6 +553,9 @@
     <script src="utils/security_manager.js"></script>
     <script src="utils/monitoring_dashboard.js"></script>
     <script src="utils/testing_manager.js"></script>
+    <script src="utils/logger.js"></script>
+    <script src="utils/test_logger.js"></script>
+    <script src="utils/error_handler.js"></script>
     <script src="utils/touch_gestures.js"></script>
     <script src="utils/mobile_navigation.js"></script>
     <script src="utils/accessibility.js"></script>
