--- a/frontend/login.html
+++ b/frontend/login.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Вход - Automation Learning Platform</title>
   <meta name="description" content="Вход в систему обучения автоматизаторов">
-  <meta name="api-base" content="http://localhost:5000">
+  <meta name="api-base" content="http://localhost:8000">
 
   <!-- CSS -->
   <link rel="stylesheet" href="styles/main.css">
@@ -265,6 +265,9 @@
   <!-- Toast Container -->
   <div id="toast-container"></div>
 
+  <!-- Logger -->
+  <script src="utils/logger.js"></script>
+
   <script>
     // Простая система уведомлений
     class Toast {
@@ -297,7 +300,7 @@
     // Система авторизации
     class AuthManager {
       constructor() {
-        this.apiBase = (document.querySelector('meta[name="api-base"]')?.content || 'http://localhost:5000').replace(/\/?$/, '');
+        this.apiBase = (document.querySelector('meta[name="api-base"]')?.content || 'http://localhost:8000').replace(/\/?$/, '');
         this.init();
       }
 
@@ -407,6 +410,13 @@
         loginLoading.style.display = 'inline';
 
         try {
+          // Логируем начало входа
+          if (window.Logger) {
+            window.Logger.info('AUTH_LOGIN', 'Login attempt started', {
+              email: emailInput.value.trim()
+            });
+          }
+
           // Добавляем задержку для предотвращения rate limiting
           await new Promise(resolve => setTimeout(resolve, 1000));
 
@@ -424,6 +434,11 @@
           const data = await response.json();
 
           if (response.status === 429) {
+            if (window.Logger) {
+              window.Logger.warn('AUTH_LOGIN', 'Rate limit exceeded', {
+                email: emailInput.value.trim()
+              });
+            }
             Toast.show('Слишком много попыток. Подождите 1 минуту.', 'warning');
             return;
           }
@@ -434,15 +449,38 @@
             localStorage.setItem('refresh_token', data.refresh_token);
             localStorage.setItem('token_expires', Date.now() + (data.expires_in * 1000));
 
+            // Логируем успешный вход
+            if (window.Logger) {
+              window.Logger.info('AUTH_LOGIN', 'Login successful', {
+                email: emailInput.value.trim(),
+                username: data.username
+              });
+            }
+
             Toast.show('Успешная авторизация! Переходим в приложение...', 'success');
 
             setTimeout(() => {
               window.location.href = 'index.html';
             }, 1500);
           } else {
+            // Логируем ошибку входа
+            if (window.Logger) {
+              window.Logger.error('AUTH_LOGIN', 'Login failed', {
+                email: emailInput.value.trim(),
+                status: response.status,
+                error: data.detail
+              });
+            }
             Toast.show(data.detail || 'Ошибка авторизации', 'error');
           }
         } catch (error) {
+          // Логируем исключение
+          if (window.Logger) {
+            window.Logger.error('AUTH_LOGIN', 'Login exception', {
+              email: emailInput.value.trim(),
+              error: error.message
+            });
+          }
           console.error('Ошибка авторизации:', error);
           Toast.show('Сетевая ошибка. Проверьте подключение.', 'error');
         } finally {
