Фронтенд готовность 100 проц

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -556,6 +556,8 @@
     <script src="utils/logger.js"></script>
     <script src="utils/test_logger.js"></script>
     <script src="utils/error_handler.js"></script>
+    <script type="module" src="utils/errorHandler.js"></script>
+    <script type="module" src="utils/testing.js"></script>
     <script src="utils/touch_gestures.js"></script>
     <script src="utils/mobile_navigation.js"></script>
     <script src="utils/accessibility.js"></script>
