feat: Implement comprehensive test data seeding and fix frontend issues
- Add comprehensive test data seeding for all modules:
  * E-commerce: 5 products with categories, pricing, and stock
  * Social Network: 5 engaging posts with Russian content
  * Task Management: 3 project boards with 9 task cards
  * Content Management: 4 categories and 5 published articles
  * Analytics: 6 metrics, reports, and dashboard widgets

- Fix frontend authentication and API issues:
  * Correct token storage and refresh logic in auth.js
  * Fix API endpoint configuration for browser access
  * Add proper error handling and debug logging
  * Fix WebSocket connection configuration

- Fix backend model compatibility:
  * Correct model imports and field names
  * Fix enum value representations
  * Implement proper foreign key relationships
  * Add missing dependencies (websockets, wsproto)

- Add environment configuration:
  * Create .env file with development settings
  * Configure proper CORS and API endpoints

- Fix frontend module loading issues:
  * Add missing updateNotificationBadge method
  * Fix TypeError in notifications.js
  * Improve script loading order and error handling

This resolves the uniform content issue across all tabs and ensures
proper data display on all module pages.

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -449,6 +449,12 @@
 
           const data = await response.json();
 
+          // Отладочная информация
+          console.log('Login response status:', response.status);
+          console.log('Login response ok:', response.ok);
+          console.log('Login data:', data);
+          console.log('Access token exists:', !!data.access_token);
+
           if (response.status === 429) {
             Toast.show('Слишком много попыток. Подождите 1 минуту.', 'warning');
             return;
